// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commitlint default 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "# ~/.huskyrc
# Note: it will run in /bin/sh shell
if command -v nodenv >/dev/null 2>&1; then
  eval \\"$(nodenv init -)\\"
fi",
    }
  }
/>
`;

exports[`commitlint default 2`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
  \\"scripts\\": {
    \\"cz\\": \\"git-cz\\"
  },
  \\"husky\\": {
    \\"hooks\\": {
      \\"commit-msg\\": \\"commitlint -E HUSKY_GIT_PARAMS\\"
    }
  },
  \\"commitlint\\": {
    \\"extends\\": [
      \\"@namics/commitlint-conventional-changelog\\"
    ]
  },
  \\"config\\": {
    \\"commitizen\\": {
      \\"path\\": \\"@namics/cz-conventional-changelog\\"
    }
  },
  \\"devDependencies\\": {
    \\"@commitlint/cli\\": \\"9.0.1\\",
    \\"@namics/commitlint-conventional-changelog\\": \\"1.1.16\\",
    \\"@namics/cz-conventional-changelog\\": \\"2.0.2\\",
    \\"commitizen\\": \\"4.1.2\\",
    \\"husky\\": \\"4.2.5\\",
    \\"lint-staged\\": \\"10.2.11\\"
  }
}",
    }
  }
/>
`;

exports[`commitlint default 3`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": ".huskyrc,package.json",
    }
  }
/>
`;
